@@ -62,7 +62,7 @@ Second parameter is a text that will be shown in the heading. You can also pass 
 
 Each button is defined by three parameters. First is its label. Second is a function that will get executed when button is clicked. Third (optional, defaults to `null`, not used in the example) will assign ID to the HTML element of the button. Use it whenever you need to change the behaviour of that particular HTML DOM element (line it's `innerHTML` or `onClick` event handler) later on.
 
-Buttons in the example shows two useful commands. First is `appx.OpenModal` which as name suggests, opens a modal window. For now, window only has some _header_ text, some _text_ as its content and has _width_ and _height_. Note that modal window is always centered, is always closable by clicking outside of it and always has a X button in top right corner which closes it as well. Resizing the application window will also close the modal (more on that [later](#resizing-the-window-and-responsiveness)).
+Buttons in the example shows two useful commands. First is `appx.OpenModal` which as name suggests, opens a modal window. For now, window only has some _header_ text, some _text_ as its content and has _width_ and _height_. Note that modal window is always centered, is always closable by clicking outside of it and always has a X button in top right corner which closes it as well.
 
 Second useful command is `appx.DisplayPage`. This command will display another page that has been registered with the application. This has some consequences, described in [this section](#resizing-the-window-and-responsiveness).
 
@@ -261,11 +261,11 @@ As you might have noticed, AppJs is trying desperately to be always responsive. 
 
 ### Resize event
 
-Each time you call `DisplayPage` or window resolution is changed (resize event, swapping between portrait/landscape, debugger opened or onscreen keyboard is displayed), the **whole** DOM is deleted and then the page currently set as active is rendered (meaning **your** content callbacks will be called). This implies that you cannot store any data in DOM, you have to cleverly store it into javascript variables. It also implies that modal windows will be closed and interactive objects can reset their behaviour if coded uncarefully. Also, when `resize` event is triggered (any beforementioned event with the exception of `DisplayPage`), the whole font size cache gets wiped (for obvious reasons).
+Each time you call `DisplayPage` or window resolution is changed (resize event, swapping between portrait/landscape, debugger opened or onscreen keyboard is displayed), the **whole** DOM is deleted and then the page currently set as active is rendered (meaning **your** content callbacks will be called). This implies that you cannot store any data in DOM, you have to cleverly store it into javascript variables. It also implies that interactive objects can reset their behaviour if coded uncarefully. Also, when `resize` event is triggered (any beforementioned event with the exception of `DisplayPage`), the whole font size cache gets wiped (for obvious reasons).
 
 This approach works... most of the time. Some browsers/devices has quite annoying behaviour - their onscreen keyboard is not rendered atop of anything else, but as a physical part of the viewport. This normally means that clicking an input item will open keyboard, keyboard will trigger resize, resize will delete whole DOM including selected input, and since there is no active input anymore, keyboard will get closed, triggering another resize.
 
-For this reason, there is a global variable `PREVENT_RESIZE`. When set to true, AppJs will still capture all resize event, but will ignore them. Note that **all** HTML elements of type `<input>` created using AppJs has a build in callbacks that will manage `PREVENT_RESIZE` to prevent bug mentioned earlier. If you want to get rid of this behaviour, you need to override their `focus` and `blur` events. On the other hand, if there are other elements you need to sanitize, those two events are a good start.
+For this reason, there is a global variable `PREVENT_RESIZE`. When set to true, AppJs will still capture all resize events, but will ignore them. Note that **all** HTML elements of type `<input>` created using AppJs has a build in callbacks that will manage `PREVENT_RESIZE` to prevent bug mentioned earlier. If you want to get rid of this behaviour, you need to override their `focus` and `blur` events. On the other hand, if there are other elements you need to sanitize, those two events are a good start.
 
 Note that behaviour of AppJs is weird if resize events are prevented. But whenever this poses a problem, simply drop the `PREVENT_RESIZE` flag and either call `ChangePage` or force resize event to fix it on runtime.
 
